# AWS-Car-warranty-claim-AI-RAG

./: .env.example  .gitignore  Dockerfile  README (4).md  docker-compose.yml  ford_warranty_policy.md  generate_sample_claim (1).py  gm_warranty_policy.md  handler.py  knowledge_base.py  pyproject.toml  setup_aws.py  setup_phase2.py  toyota_warranty_policy.md
.github/workflows/: ci.yml
app/: config.py
app/agent/: graph.py
app/api/: main.py
app/api/routes/: claims.py  health.py
app/extraction/: parsers.py  pipeline.py  textract.py  vision.py
app/models/: claim.py
app/observability/: logger.py
app/rag/: knowledge_base.py
data/mock/oem_policies/: ford_warranty_policy.md
frontend/: index.html.html
tests/: test_phase1.py
