[tool.poetry]
name = "warranty-claim-ai"
version = "0.1.0"
description = "AWS-native warranty claim AI processor — Bedrock + RAG + LangGraph"
authors = ["Yonathan Jaramillo <jaramilloyonathanmlb@gmail.com>"]
readme = "README.md"
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.7.0"
pydantic-settings = "^2.3.0"
boto3 = "^1.34.0"
langchain-aws = "^0.1.0"
langgraph = "^0.1.0"
python-multipart = "^0.0.9"
structlog = "^24.2.0"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"
ruff = "^0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
